# mlflow-credit-risk

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-mlflow.txt  requirements.txt
app/: requirements.txt  streamlit_app.py
configs/: project.toml
data/raw/: README.md
docs/: deployment.md
mlruns/0/: meta.yaml
mlruns/533867732642086042/: meta.yaml
mlruns/533867732642086042/191b66a8bedd4483b32c2e0bee0e4f51/: meta.yaml
mlruns/533867732642086042/191b66a8bedd4483b32c2e0bee0e4f51/metrics/: accuracy  average_precision  f1  lift_at_1000  lift_at_5000  precision  precision_at_1000  precision_at_5000  recall  roc_auc
mlruns/533867732642086042/191b66a8bedd4483b32c2e0bee0e4f51/outputs/m-637d5a6b1ca04e44b613080b96986d0c/: meta.yaml
mlruns/533867732642086042/191b66a8bedd4483b32c2e0bee0e4f51/tags/: mlflow.runName
mlruns/533867732642086042/models/m-637d5a6b1ca04e44b613080b96986d0c/: meta.yaml
models/: model.joblib  model_card.json  pipeline.joblib
notebooks/: 00_business_understanding.ipynb  01_data_understanding.ipynb  02_exploratory_analysis.ipynb  03_feature_engineering.ipynb  04_modeling_and_business_results.ipynb  05_deployment_and_consumption.ipynb  README.md
reports/: data_profile.json  metrics.json
scripts/: prepare_give_me_some_credit.py  sagemaker_deployment_template.py  sample_api_request.py
src/: config.py  data_loader.py  pipeline.py  predict.py  preprocessing.py  train.py
src/mlflow_credit_risk/: __init__.py  analysis.py  api.py
tests/: test_pipeline.py
(+15 files in other folders)
